@@ -24,6 +24,26 @@ begin_import
 import|import static
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|utils
+operator|.
+name|YarnServerBuilderUtils
+operator|.
+name|newNodeHeartbeatResponse
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
 name|mockito
 operator|.
 name|Mockito
@@ -214,7 +234,43 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|CountDownLatch
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|CyclicBarrier
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|ExecutorService
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|Executors
 import|;
 end_import
 
@@ -784,6 +840,24 @@ name|hadoop
 operator|.
 name|yarn
 operator|.
+name|proto
+operator|.
+name|YarnServerCommonServiceProtos
+operator|.
+name|NodeHeartbeatResponseProto
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
 name|security
 operator|.
 name|ContainerTokenIdentifier
@@ -885,6 +959,30 @@ operator|.
 name|protocolrecords
 operator|.
 name|RegisterNodeManagerResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|yarn
+operator|.
+name|server
+operator|.
+name|api
+operator|.
+name|protocolrecords
+operator|.
+name|impl
+operator|.
+name|pb
+operator|.
+name|NodeHeartbeatResponsePBImpl
 import|;
 end_import
 
@@ -8659,6 +8757,326 @@ name|nm
 operator|.
 name|stop
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testConcurrentAccessToSystemCredentials ()
+specifier|public
+name|void
+name|testConcurrentAccessToSystemCredentials
+parameter_list|()
+block|{
+specifier|final
+name|Map
+argument_list|<
+name|ApplicationId
+argument_list|,
+name|ByteBuffer
+argument_list|>
+name|testCredentials
+init|=
+operator|new
+name|HashMap
+argument_list|<>
+argument_list|()
+decl_stmt|;
+name|ByteBuffer
+name|byteBuffer
+init|=
+name|ByteBuffer
+operator|.
+name|wrap
+argument_list|(
+operator|new
+name|byte
+index|[
+literal|300
+index|]
+argument_list|)
+decl_stmt|;
+name|ApplicationId
+name|applicationId
+init|=
+name|ApplicationId
+operator|.
+name|newInstance
+argument_list|(
+literal|123456
+argument_list|,
+literal|120
+argument_list|)
+decl_stmt|;
+name|testCredentials
+operator|.
+name|put
+argument_list|(
+name|applicationId
+argument_list|,
+name|byteBuffer
+argument_list|)
+expr_stmt|;
+specifier|final
+name|List
+argument_list|<
+name|Throwable
+argument_list|>
+name|exceptions
+init|=
+name|Collections
+operator|.
+name|synchronizedList
+argument_list|(
+operator|new
+name|ArrayList
+argument_list|<
+name|Throwable
+argument_list|>
+argument_list|()
+argument_list|)
+decl_stmt|;
+specifier|final
+name|int
+name|NUM_THREADS
+init|=
+literal|10
+decl_stmt|;
+specifier|final
+name|CountDownLatch
+name|allDone
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+name|NUM_THREADS
+argument_list|)
+decl_stmt|;
+specifier|final
+name|ExecutorService
+name|threadPool
+init|=
+name|Executors
+operator|.
+name|newFixedThreadPool
+argument_list|(
+name|NUM_THREADS
+argument_list|)
+decl_stmt|;
+specifier|final
+name|AtomicBoolean
+name|stop
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|(
+literal|false
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|NUM_THREADS
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|threadPool
+operator|.
+name|submit
+argument_list|(
+operator|new
+name|Runnable
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+literal|100
+operator|&&
+operator|!
+name|stop
+operator|.
+name|get
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|NodeHeartbeatResponse
+name|nodeHeartBeatResponse
+init|=
+name|newNodeHeartbeatResponse
+argument_list|(
+literal|0
+argument_list|,
+name|NodeAction
+operator|.
+name|NORMAL
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|,
+literal|0
+argument_list|)
+decl_stmt|;
+name|nodeHeartBeatResponse
+operator|.
+name|setSystemCredentialsForApps
+argument_list|(
+name|testCredentials
+argument_list|)
+expr_stmt|;
+name|NodeHeartbeatResponseProto
+name|proto
+init|=
+operator|(
+operator|(
+name|NodeHeartbeatResponsePBImpl
+operator|)
+name|nodeHeartBeatResponse
+operator|)
+operator|.
+name|getProto
+argument_list|()
+decl_stmt|;
+name|Assert
+operator|.
+name|assertNotNull
+argument_list|(
+name|proto
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|exceptions
+operator|.
+name|add
+argument_list|(
+name|t
+argument_list|)
+expr_stmt|;
+name|stop
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|allDone
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+name|int
+name|testTimeout
+init|=
+literal|2
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Timeout waiting for more than "
+operator|+
+name|testTimeout
+operator|+
+literal|" "
+operator|+
+literal|"seconds"
+argument_list|,
+name|allDone
+operator|.
+name|await
+argument_list|(
+name|testTimeout
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|ie
+parameter_list|)
+block|{
+name|exceptions
+operator|.
+name|add
+argument_list|(
+name|ie
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|threadPool
+operator|.
+name|shutdownNow
+argument_list|()
+expr_stmt|;
+block|}
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"Test failed with exception(s)"
+operator|+
+name|exceptions
+argument_list|,
+name|exceptions
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 comment|// Add new containers info into NM context each time node heart beats.
